# arga-oplogger

./: .env.sample  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: build-image.yml  build.yml  mirror.yml
docs/: design.org  reduction.org
docs/api/Bioplatforms/: bruno.json  current packages.bru  organisation list.bru  package search.bru
rdf/: annotations.ttl  arga.ttl  data_products.ttl  depositions.ttl  extractions.ttl  mapping.ttl  names.ttl  sequences.ttl  specimens.ttl  subsamples.ttl  taxonomy.ttl
src/: archive.rs  database.rs  errors.rs  frames.rs  main.rs  operations.rs  reducer.rs  utils.rs
src/collections/: mod.rs
src/extractor/: bpa.rs  dnazoo.rs  errors.rs  genbank.rs  mod.rs  ncbi_datasets.rs  ncbi_taxonomy.rs  refseq.rs
src/loggers/: accessions.rs  admin_media.rs  agents.rs  annotations.rs  assemblies.rs  collections.rs  data_products.rs  datasets.rs  depositions.rs  extractions.rs  libraries.rs  mod.rs  names.rs  nomenclatural_acts.rs  organisms.rs  projects.rs  publications.rs  sequence_runs.rs  sequences.rs  sources.rs  subsamples.rs  taxa.rs  taxonomic_acts.rs  tissues.rs
src/names/: mod.rs
src/nomenclatural_acts/: mod.rs
src/readers/: csv.rs  meta.rs  mod.rs
src/readers/plazi/: document.rs  mod.rs  parsing.rs  treatments.rs
src/readers/plazi/formatting/: footnote.rs  keys.rs  mod.rs  normalized_token.rs  page_break_token.rs  page_start_token.rs  spans.rs  table.rs  uri.rs  uuid.rs  values.rs  vocabulary.rs
src/readers/plazi/sections/: authority.rs  caption.rs  citation.rs  codes.rs  location.rs  materials_citation.rs  mod.rs  nomenclature.rs  publications.rs  subsection.rs  taxonomic_name.rs  treatment.rs  type_status.rs
src/taxa/: mod.rs  utils.rs
src/taxonomic_acts/: mod.rs
src/transformer/: dataset.rs  errors.rs  main.rs  mapped.rs  mod.rs  rdf.rs  resolver.rs
src/transformer/models/: agent.rs  annotation.rs  assembly.rs  collecting.rs  data_products.rs  extraction.rs  library.rs  mod.rs  name.rs  organism.rs  publications.rs  sequencing_run.rs  subsample.rs  tissue.rs
