[package]
name = "oplogger"
version = "0.1.0"
edition = "2021"

[dependencies]
# arga-core = { git = "https://github.com/ARGA-Genomes/arga-backend.git" }
# for local development
arga-core = { path = "../backend/core" }
chrono = { version = "0.4.38", features = ["serde"] }

clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
diesel = { version = "2.2.2", features = ["uuid", "numeric", "serde_json", "chrono", "r2d2", "postgres"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
heck = "0.5.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
