[package]
name = "oplogger"
version = "0.1.0"
edition = "2021"

[dependencies]
arga-core = { git = "https://github.com/ARGA-Genomes/arga-backend.git" }
# arga-core = { path = "../backend/core" }
bigdecimal = { version = "0.4.5", features = ["serde"] }
brotli = "8.0.2"
chrono = { version = "0.4.38", features = ["serde"] }

clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
diesel = { version = "2.2.2", features = ["uuid", "numeric", "serde_json", "chrono", "r2d2", "postgres"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
flate2 = "1.1.5"
heck = "0.5.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
iref = { version = "3.2.2", features = ["macros"] }
iref-enum = "3.0.0"
memchr = "2.7.4"
memmap2 = "0.9.4"
# oxigraph = { version = "0.5.1", default-features = false, features = ["rdf-12", "rocksdb"] }
oxiri = "0.2.11"
# oxrocksdb-sys = "0.5.1"
quick-xml = "0.36.1"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
sophia = "0.9.0"
static-iref = "3.0.0"
tar = "0.4.41"
taxonomy = "0.10.1"
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = "3.1.4"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
xxhash-rust = { version = "0.8.11", features = ["xxh3"] }


# for local development
# [patch."https://github.com/ARGA-Genomes/arga-backend.git"]
# arga-core = { path = "../backend/core" }
